# bmAI-rn-tf-cpp

./: App.js  App.tsx  android_key  android_key_new_2022  app.json  helloworld.djinni  index.js  index.tsx  metro.config.js  package.json  run_djinni.sh  tsconfig.json
android/: .project  build.gradle  gradle.properties  settings.gradle
android/app/: BUCK  build.gradle
android/app/src/debug/java/com/rncpp/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.android.bundle
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/cppreactnative/helloworld/: HelloWorldModule.java  HelloWorldPackage.java
android/app/src/main/java/com/rncpp/: MainActivity.java  MainApplication.java
android/app/src/main/java/com/rncpp/helloworld/: HelloWorldModule.java  HelloWorldPackage.java
android/app/src/main/jni/: Android.mk  Application.mk
android/app/src/main/res/values/: strings.xml
android/fixAndroid/: android-gradle-fix
djinni/cpp/: hello_world.hpp
djinni/java/com/rncpp/helloworld/: HelloWorld.java
djinni/jni/: NativeHelloWorld.cpp
djinni/objc/: HWHelloWorld+Private.mm  HWHelloWorld.h
ios/: Podfile  Podfile_prev  sentry.properties
ios/ReactBridge/: RCTHelloWorld.h  RCTHeloWorld.m
ios/rncpp/: AppDelegate.h  AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/rncpp.xcodeproj/: project.pbxproj
ios/rncpp.xcodeproj/xcshareddata/xcschemes/: rncpp-tvOS.xcscheme  rncpp.xcscheme
ios/rncpp.xcworkspace/: contents.xcworkspacedata
ios/rncpp/Base.lproj/: LaunchScreen.xib
ios/rncppTests/: rncppTests.m
src/: App.tsx  home.tsx
src/assets/cnn_model/: model.json
src/assets/models/cnn/cnn_padded/: model.json
src/assets/models/cnn/cnn_padded_newborn/: model.json
src/assets/models/old_models/model/frozen/: model.json
src/assets/models/openpose/post_openpose/lying/: model.json
src/assets/post_openpose/standing/: model.json
src/components/: layout.tsx
src/components/drawer/: index.tsx
src/components/photoPicker/: index.tsx
src/components/select/: index.tsx
src/components/text/: instruction.tsx
src/cpp/: hello_world_impl.cpp  hello_world_impl.hpp
src/hooks/: useCachedResources.tsx
src/pages/: cnn.tsx  home.tsx
src/utils/: index.ts  tf_utils.ts  uriHelper.ts
